--- a/EmberSrv/EmberSrv.csproj
+++ b/EmberSrv/EmberSrv.csproj
@@ -156,6 +156,21 @@
     <Content Include="App_Data\HistoriesContext.mdf" />
     <Content Include="App_Data\HistoriesContext_log.ldf" />
     <Content Include="Global.asax" />
+    <Content Include="Images\bic\1.jpg" />
+    <Content Include="Images\bic\2.jpg" />
+    <Content Include="Images\bic\3.jpg" />
+    <Content Include="Images\bic\4.jpg" />
+    <Content Include="Images\bic\5.jpg" />
+    <Content Include="Images\bic\6.jpg" />
+    <Content Include="Images\bic\7.jpg" />
+    <Content Include="Images\bic\8.jpg" />
+    <Content Include="Images\bic\9.jpg" />
+    <Content Include="Images\bic\default.jpg" />
+    <Content Include="Images\dep\1.jpg" />
+    <Content Include="Images\dep\2.jpg" />
+    <Content Include="Images\dep\3.jpg" />
+    <Content Include="Images\dep\4.jpg" />
+    <Content Include="Images\dep\default.jpg" />
     <Content Include="scripts\ai.0.22.19-build00125.js" />
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Web.config" />
